--- a/steel-bars-calculator/index.html
+++ b/steel-bars-calculator/index.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Krishna Niraula">
     
-      <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/steel-bars-calculator/style.css">
     <link rel="canonical" href="https://krishnaniraula.com.np/steel-bars-calculator/">
     
  
