--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
             <div class="box-container">
               <!--  <a href="converter/unit-converter/" class="box">Unit Converter</a>   -->
                 <a href="asphalt-calculator/" class="box">Asphalt Calculator</a>
+				<a href="https://krishnaniraula.com.np/asphalt-calculator/costefficiency.html">Which Tipper/Crusher is best for me?</a>
 		<!--  <a href="concrete-calculator/" class="box">Concrete Calculator</a>   -->
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
 		<a href="#" class="box" id="steel-gi-calculator">Steel and GI Calculator</a>
